# Langchain2-

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
generativeai/: 2-usingTool.ipynb  3-agent_Intro.ipynb  4-agents_with_multiple_tools.ipynb  5-pydantic.ipynb  6-messages.ipynb  7-agents_with_memory.ipynb  demo.ipynb  demo2.ipynb
